--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,9 @@
 						<li><a href="##">Blade系列</a></li>
 						<li><a href="##">远航系列</a></li>
 					</ul>
-					<div><!--放置右侧菜单--></div>
+					<div>
+						
+					</div>
 				</li>
 				<li class="menu-2">
 					<h4><a href="##">智能终端</a></h4>
@@ -551,6 +553,12 @@
 	
 	<!--导入尾部-->
 	<div class="footercontent"></div>
+	
+	<ul class="listnav">
+		<li class="listnav-1"><a href="##"></a></li>
+		<li class="listnav-2"><a href="##"></a></li>
+		<li class="listnav-3"><a href="##"></a></li>
+	</ul>
 	<script src="script/thirdplugins/jquery.js" type="text/javascript"></script>
 	<script src="script/js/index.js" type="text/javascript"></script>
 </body>
