静态页面基本大概完成了百分之七八十左右

--- a/src/cart.html
+++ b/src/cart.html
@@ -14,8 +14,19 @@
 	<!--导入头部-->
 	<div class="topcontent"></div>
 	
-	<div class="cart-middle" style="height: 300px;background: #fff;text-align: center;line-height: 300px;font-size: 100px;">
-		<div class="wrapper">购物车</div>
+	<div class="cart-middle">
+		<div class="wrapper">
+			<div class="cart-blank">
+				<div class="cart-img"><img src="https://www.myzte.com/themes/pc/zmall/images/blankcart.png?vb701" alt=""></div>
+				<div class="cart-text">
+					<h3>购物车是空的！</h3>
+					<p>请快挑选喜欢的商品吧</p>
+				</div>
+				<div class="cart-btn">
+					<p><a href="##" class="rightbtn">立即去购物</a></p>
+				</div>
+			</div>
+		</div>
 	</div>
 	
 	<!--导入尾部-->
