--- a/src/details.html
+++ b/src/details.html
@@ -51,30 +51,74 @@
 						</ul>
 					</div>
 					<div class="next"><img src="https://www.myzte.com/themes/pc/zhongxing/images/right-1.png?vb701" alt=""></div>
-				</div>
-			</div>
+				</div><!--pic-slide-->
+			</div><!--左边盒子-->
 			<!--右边盒子-->
 			<div class="m-d-right">
 				<h1>ZTE中兴 天机Axon M折叠智能手机<br/><small>4GB+64GB/黑色/全网通</small></h1>
 				<p>直播、互动必备神器，微信聊天刷圈两不误，四种模式刷新商务、游戏、直播、阅读、拍照掌中体验！保修延长至2年，碎屏免费维修1次。 </p>
 				<div class="outprice"><span><small>￥</small><strong>3888.0</strong></span></div>
-				<hr style="margin-bottom:8px; color: #E6E6E6;">
+				<hr style="margin-bottom:8px; color: #ccc;">
 				<div class="discounts">
 					<dl class="dl-horizontal">
 						<label>领 优 惠 券&nbsp;</label> &nbsp;
 						<a href="##" style="color:red" id="get_coupons">领取优惠券&gt;&gt;</a>
 					</dl>
-				</div>
+				</div><!--discounts-->
 				<div class="cuxiao">
 					<dl class="dl-horizontal">
-						<label>促 销 详 情&nbsp;</label>
-						<div style="margin-top: -5px;">
-							<span style="background: #fc6628;">送赠品</span>
+						<label>促 销 详 情&nbsp;</label>&nbsp;
+						<div style="margin-top: -5px; display: inline-block;margin-left: 5px;">
+							<span style="background: #fc6628;color: #fff;">送赠品</span>
 							<a href="##"><img src="https://image.myzte.com/bd/9b/98d736baaa40.jpg!s" alt="" style="width: 30px;height: 30px;vertical-align: middle;"></a>&nbsp;赠皮套
 						</div>
 					</dl>
+				</div><!--cuxiao-->
+				<div class="option">
+					<dl class="dl-horizontal">
+						<div class="opt-inner">
+							<label>版　　   &nbsp;&nbsp;本</label>
+							<dd class="fl">
+								<ul class="list-inline">
+									<li class="current"><span><img src="https://image.myzte.com/44/6b/6143852513f3.jpg!xs?72422_OW800_OH800" alt="">4GB+64GB</span></li>
+									<li><span><img src="https://image.myzte.com/44/6b/6143852513f3.jpg!xs?72422_OW800_OH800" alt="">6GB+128GB</span></li>
+								</ul>
+							</dd>
+						</div>
+						
+						<div class="opt-inner">
+							<label>颜　　   &nbsp;&nbsp;色</label>
+							<dd class="fl">
+								<ul class="list-inline">
+									<li class="current"><span>黑色</span></li>
+								</ul>
+							</dd>
+						</div>
+						
+						<div class="opt-inner">
+							<label>制　　   &nbsp;&nbsp;式</label>
+							<dd class="fl">
+								<ul class="list-inline">
+									<li class="current"><span>全网通</span></li>
+								</ul>
+							</dd>
+						</div>
+					</dl>
+				</div><!--option-->
+				<hr style="margin-bottom:20px; color: #ccc;margin-top: 20px;">
+				<div class="purchase-details">
+					<a href="##" class="join-cart">加入购物车</a>
+					<a href="##" class="buy-now">立即购买</a>
+					<a href="##" class="QR-code-buy">
+						<img src="https://www.myzte.com/themes/pc/zhongxing/images/ewm.png?vb701" alt="">&nbsp;扫码购买
+						<div class="image-block"><img src="https://www.myzte.com/openapi/qrcode/encode/size/5/margin/5?txt=https%3A%2F%2Fwww.myzte.com%2Faxon-m.html" alt=""></div>
+					</a>
+					<a href="##" class="like">
+						<img src="https://www.myzte.com/themes/pc/zhongxing/images/heart_state1.png?vb701" alt="">
+						<small>喜欢<em> (84)</em></small>
+					</a>
 				</div>
-			</div>
+			</div><!--右边盒子-->
 		</div><!--wrapper-->
 	</div><!--最外部盒子-->
 	
