--- a/src/login.html
+++ b/src/login.html
@@ -21,8 +21,8 @@
 				<li><a href="##">意见反馈</a></li>
 			</ul>
 			<ul class="header-right">
-				<li><a href="##">登录</a></li>
-				<li><a href="##">注册</a></li>
+				<li><a href="login.html">登录</a></li>
+				<li><a href="registor.html">注册</a></li>
 			</ul>
 		</div>
 	</div><!--外层盒子-->
@@ -45,9 +45,11 @@
 						<div>
 							<input type="password" name="password" id="password" placeholder="密码">
 						</div>
-						<div>
+						<div class="passcode">
 							<input type="password" name="repass" id="repass" placeholder="验证码">
+							<span class="passcode-inner"><img src="https://www.myzte.com/vcode-index-passport.html" alt=""></span>
 						</div>
+						<span class="changepasscode"><strong>更换验证码</strong></span>
 						<div>
 							<button type="submit" id="sub">登录</button>
 						</div>
