--- a/src/registor.html
+++ b/src/registor.html
@@ -21,8 +21,8 @@
 				<li><a href="##">意见反馈</a></li>
 			</ul>
 			<ul class="header-right">
-				<li><a href="##">登录</a></li>
-				<li><a href="##">注册</a></li>
+				<li><a href="login.html">登录</a></li>
+				<li><a href="registor.html">注册</a></li>
 			</ul>
 		</div>
 	</div><!--外层盒子-->
