进一步完善了五个静态页面首页加了一个楼梯

--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,28 @@
 						<li><a href="##">Blade系列</a></li>
 						<li><a href="##">远航系列</a></li>
 					</ul>
-					<div>
-						
+					<!--右侧菜单鼠标经过时显示-->
+					<div class="more-goods-block clearfix">
+						<div class="goods-block"><!--state说明-->
+							<ul class="list-unstyled clearfix">
+								<li class="goods-state">
+									<div class="goods-image"><img src="https://image.myzte.com/f1/77/7512c41d5fb4.jpg?14449_H800_W800" alt=""></div>
+									<div class="goods-name"><a href="javascript:;"><span>天机系列</span></a></div>
+								</li>
+								<li class="goods-state">
+									<div class="goods-image"><img src="https://image.myzte.com/37/60/6f70cae923ac.jpg?15301_H800_W800" alt=""></div>
+									<div class="goods-name"><a href="javascript:;"><span>天机系列</span></a></div>
+								</li>
+								<li class="goods-state">
+									<div class="goods-image"><img src="https://image.myzte.com/b3/a3/a53719f59ad4.png?17669_H800_W800" alt=""></div>
+									<div class="goods-name"><a href="javascript:;"><span>天机系列</span></a></div>
+								</li>
+								<li class="goods-state">
+									<div class="goods-image"><img src="https://image.myzte.com/15/9a/9b5232e00240.jpg?17736_H800_W800" alt=""></div>
+									<div class="goods-name"><a href="javascript:;"><span>天机系列</span></a></div>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</li>
 				<li class="menu-2">
@@ -110,7 +130,7 @@
 	</div>
 	
 	<!--今日抢购-->
-	<div class="purchase">
+	<div class="purchase louti">
 		<div class="wrapper1240">
 			<div class="purchase-title">
 				<div class="purchase-t">
@@ -138,7 +158,7 @@
 	</div><!--最外层盒子-->
 	
 	<!--手机专区-->
-	<div class="mobilephone">
+	<div class="mobilephone louti">
 		<div class="wrapper1240">
 			<div class="mobilephone-title">
 				<div class="mobilephone-t">
@@ -243,7 +263,7 @@
 	</div><!--最外层盒子-->
 	
 	<!--配件专区-->
-	<div class="parts">
+	<div class="parts louti">
 		<div class="wrapper1240">
 			<div class="parts-title">
 				<div class="parts-left">
@@ -479,7 +499,7 @@
 	</div><!--最外层盒子-->
 	
 	<!--智能硬件-->
-	<div class="hardware">
+	<div class="hardware louti">
 		<div class="wrapper1240">
 			<div class="hardware-title">
 				<div class="hardware-t">
@@ -554,11 +574,23 @@
 	<!--导入尾部-->
 	<div class="footercontent"></div>
 	
+	<!--右侧固定框-->
 	<ul class="listnav">
 		<li class="listnav-1"><a href="##"></a></li>
 		<li class="listnav-2"><a href="##"></a></li>
 		<li class="listnav-3"><a href="##"></a></li>
 	</ul>
+	
+	<!--左侧楼梯-->
+    <div id="loutinav">
+        <ul>
+            <li class="active"><span>今日抢购</span> </li>
+            <li><span>手机专区</span> </li>
+            <li><span>配件专区</span> </li>
+            <li><span>智能硬件</span> </li>
+            <li class="last">顶部</li>
+        </ul>
+    </div>
 	<script src="script/thirdplugins/jquery.js" type="text/javascript"></script>
 	<script src="script/js/index.js" type="text/javascript"></script>
 </body>
