首页写了一些效果

--- a/src/index.html
+++ b/src/index.html
@@ -20,26 +20,22 @@
 	<div class="banner">
 			<!--放置6张图片-->
 			<ul class="pic">
-				<li>
-					<a href="##">
-						<img src="https://image.myzte.com/54/5e/5349268d0701.jpg?20765_H480_W1920" alt="">
-					</a>
-				</li>
+				<li><a href="##"><img src="https://image.myzte.com/54/5e/5349268d0701.jpg?20765_H480_W1920" alt=""></a></li>
 				<li><a href="##"><img src="" alt=""></a></li>
 				<li><a href="##"><img src="" alt=""></a></li>
 				<li><a href="##"><img src="" alt=""></a></li>
 				<li><a href="##"><img src="" alt=""></a></li>
 				<li><a href="##"><img src="" alt=""></a></li>
 			</ul>
-			<ol class="btn">
+			<div class="btn">
 				<!--轮播图切换小圆点-->
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-			</ol>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+			</div>
 			<!--菜单-->
 			<ul class="menu">
 				<li class="menu-1">
@@ -173,7 +169,7 @@
 					</div>
 				</div>
 				<ul class="mobilephone-goods-right">
-					<li class="m-goods-1">
+					<!--<li class="m-goods-1">
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
@@ -256,7 +252,7 @@
 								</div>
 							</a>
 						</div>
-					</li>
+					</li>-->
 				</ul>
 			</div>
 		</div><!--wrapper1240-->
@@ -272,7 +268,7 @@
 				</div>
 				<div class="parts-right">
 					<ul class="pictab">
-						<li class="tab1 active"><a href="##">壳膜套</a></li>
+						<li class="tab1 partsactive"><a href="##">壳膜套</a></li>
 						<li class="tab2"><a href="##">充电宝</a></li>
 						<li class="tab3"><a href="##">耳机</a></li>
 					</ul>
@@ -303,7 +299,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/0a/19/16a77184067a.jpg!s?75391_OW800_OH800" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -320,7 +316,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/be/31/33eefb5d9ee5.jpg!s?76170_OW800_OH800" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -337,7 +333,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/70/6e/630686cb7dea.jpg!s?18927_OW800_OH800" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -357,7 +353,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/48/1d/17821aa773c2.jpg!s?06983_OW800_OH800" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -374,7 +370,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/43/13/1e38f0caa072.jpg!s?06983_OW800_OH800" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -391,7 +387,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/4b/c7/ccb0a2bd8a6c.jpg!s?06981_OW800_OH800" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -408,7 +404,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/91/28/221f5f8ef84b.jpg!s?65834_OW1000_OH1000" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -428,7 +424,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/59/e1/e49ded580c8a.jpg!s?06983_OW800_OH800" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -445,7 +441,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/d7/10/1c7f7132ef7b.jpg!s?06983_OW800_OH800" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -462,7 +458,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/dc/cc/c4c1a98edc2a.png!s?73694_OW800_OH800" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -479,7 +475,7 @@
 						<div class="scalegoods">
 							<a href="##">
 								<div class="scalegoods-img">
-									<img src="https://image.myzte.com/ee/39/33e41bfa6b13.jpg!s?75566_OW800_OH800" alt="">
+									<img src="https://image.myzte.com/0d/94/98d38133158f.jpg!s?06983_OW800_OH800" alt="">
 								</div>
 								<div class="scalegoods-content">
 									<div class="goods-title">
@@ -584,7 +580,7 @@
 	<!--左侧楼梯-->
     <div id="loutinav">
         <ul>
-            <li class="active"><span>今日抢购</span> </li>
+            <li class="loutiactive"><span>今日抢购</span> </li>
             <li><span>手机专区</span> </li>
             <li><span>配件专区</span> </li>
             <li><span>智能硬件</span> </li>
