首页完成轮播图和部分数据渲染，完成注册效果

--- a/src/cart.html
+++ b/src/cart.html
@@ -23,7 +23,7 @@
 					<p>请快挑选喜欢的商品吧</p>
 				</div>
 				<div class="cart-btn">
-					<p><a href="##" class="rightbtn">立即去购物</a></p>
+					<p><a href="index.html" class="rightbtn">立即去购物</a></p>
 				</div>
 			</div>
 		</div>
