--- a/src/header.html
+++ b/src/header.html
@@ -10,8 +10,9 @@
 				<li><a href="##">意见反馈</a></li>
 			</ul>
 			<ul class="header-top-right">
-				<li><a href="login.html">登录</a></li>
-				<li><a href="registor.html">注册</a></li>
+				<li class="loginbox"><a href="login.html">登录</a></li>
+				<li class="registorbox"><a href="registor.html">注册</a></li>
+				<li class="adminbox" style="display: none;"><span></span><a href="javascript:;">退出</a></li>
 				<li><a href="cart.html">
 					<img src="https://www.myzte.com/themes/pc/zmall/images/shopcart.png?vb701">&nbsp;购物车
 					</a>
