--- a/src/login.html
+++ b/src/login.html
@@ -9,6 +9,7 @@
 	<style type="text/css">
 		
 	</style>
+	<script src="script/js/require.js" type="text/javascript"  defer async="true" data-main="script/js/main.js"></script>
 </head>
 <body>
 	<!--顶部-->
@@ -37,21 +38,18 @@
 				<div class="reg-title">
 					欢迎登录
 				</div>
+				<span id="errordata">请输入用户名和密码</span>
 				<div class="reg-contents">
-					<form id="signup" class="" action="" method="post">
+					<form id="signin" class="" action="" method="">
 						<div>
 							<input type="text" name="username" id="username" placeholder="手机号/邮箱/用户名/工号">
 						</div>
 						<div>
 							<input type="password" name="password" id="password" placeholder="密码">
 						</div>
-						<div class="passcode">
-							<input type="password" name="repass" id="repass" placeholder="验证码">
-							<span class="passcode-inner"><img src="https://www.myzte.com/vcode-index-passport.html" alt=""></span>
-						</div>
-						<span class="changepasscode"><strong>更换验证码</strong></span>
 						<div>
-							<button type="submit" id="sub">登录</button>
+							<!--<button type="submit" id="sub">登录</button>-->
+							<input type="button" name="submit" value=" 登录  " id="btnsub"/>
 						</div>
 						<p><img src="https://www.myzte.com/themes/pc/zhongxing/images/fgx.png?vb701" alt="">其他方式登录<img src="https://www.myzte.com/themes/pc/zhongxing/images/fgx.png?vb701" alt=""></p>
 						<ul class="threeimg">
@@ -59,7 +57,7 @@
 							<li><a href="##"><img src="https://www.myzte.com/themes/pc/zhongxing/images/toauth/weibo.png?vb701" alt=""></a></li>
 							<li><a href="##"><img src="https://www.myzte.com/themes/pc/zhongxing/images/toauth/qq.png?vb701" alt=""></a></li>
 						</ul>
-						<p><a href="##" class="registor-now">立即注册</a><a href="##" class="forget-pass">忘记密码？</a></p>
+						<p><a href="http://10.31.162.62/myzte/src/registor.html" class="registor-now">立即注册</a><a href="##" class="forget-pass">忘记密码？</a></p>
 					</form>
 				</div>
 			</div>
@@ -74,7 +72,5 @@
 		<li class="listnav-2"><a href="##"></a></li>
 		<li class="listnav-3"><a href="##"></a></li>
 	</ul>
-	<script src="script/thirdplugins/jquery.js" type="text/javascript"></script>
-	<script src="script/js/login.js" type="text/javascript"></script>
 </body>
 </html>
