--- a/src/registor.html
+++ b/src/registor.html
@@ -9,6 +9,7 @@
 	<style type="text/css">
 		
 	</style>
+	<script src="script/js/require.js" type="text/javascript"  defer async="true" data-main="script/js/main.js"></script>
 </head>
 <body>
 	<!--顶部-->
@@ -38,23 +39,27 @@
 					欢迎注册
 				</div>
 				<div class="reg-contents">
-					<form id="signup" class="" action="" method="post">
+					<form id="signup" action="http://10.31.162.62/myzte/php/reg.php" method="post">
 						<div>
 							<input type="text" name="username" id="username" placeholder="仅支持手机号">
+							<label id="username-error" class="error" for="username">(必填)</label>
 						</div>
 						<div>
 							<input type="password" name="password" id="password" placeholder="登录密码">
+							<label id="password-error" class="error" for="password">(必填，不得少于6位)</label>
 						</div>
 						<div>
-							<input type="password" name="repass" id="repass" placeholder="请再次登录密码">
+							<input type="password" name="repass" id="repass" placeholder="确认密码">
+							<label id="repass-error" class="error" for="repass">(必填，不得少于6位)</label>
 						</div>
-						<div id="checkinput">
-							<input type="checkbox" checked="checked" id="check"><span>同意</span><a href="##">《服务协议》</a>
+						<div id="checkinputcheck">
+							<input type="checkbox" checked="checked" id="checkfuwu"><span>同意</span><a href="##">《服务协议》</a>
 						</div>
 						<div>
-							<button type="submit" id="sub">立即注册</button>
+							<!--<button type="submit" id="sub">立即注册</button>-->
+							<input type="submit" value="注册" name="submit" id="sub">
 						</div>
-						<p>已有账号？<a href="##">立即登录</a></p>
+						<p>已有账号？<a href="login.html">立即登录</a></p>
 					</form>
 				</div>
 			</div>
@@ -69,7 +74,5 @@
 		<li class="listnav-2"><a href="##"></a></li>
 		<li class="listnav-3"><a href="##"></a></li>
 	</ul>
-	<script src="script/thirdplugins/jquery.js" type="text/javascript"></script>
-	<script src="script/js/registor.js" type="text/javascript"></script>
 </body>
 </html>
