--- a/src/details.html
+++ b/src/details.html
@@ -9,6 +9,7 @@
 	<style type="text/css">
 		
 	</style>
+	<script src="script/js/require.js" type="text/javascript"  defer async="true" data-main="script/js/main.js"></script>
 </head>
 <body>
 	<!--导入头部-->
@@ -21,7 +22,7 @@
 				<li><a href="##">首页</a></li>
 				<li><a href="##">手机</a></li>
 				<li><a href="##">天机系列</a></li>
-				<li class="active">ZTE中兴 天机Axon M折叠智能手机 6GB+128GB/黑色/全网通</li>
+				<li class="explainactive">ZTE中兴 天机Axon M折叠智能手机 6GB+128GB/黑色/全网通</li>
 			</ol>
 		</div>
 	</div>
@@ -32,13 +33,13 @@
 			<!--左边盒子-->
 			<div class="m-d-left">
 				<div class="product-img">
-					<img src="https://image.myzte.com/45/86/8f54705d1a4d.jpg!l?94787_OW800_OH800" alt="">
+					<!--<img src="https://image.myzte.com/45/86/8f54705d1a4d.jpg!l?94787_OW800_OH800" alt="">-->
 				</div>
 				<div class="pic-slide">
 					<div class="prev"><img src="https://www.myzte.com/themes/pc/zhongxing/images/left-1.png?vb701" alt=""></div>
 					<div class="pic-list">
 						<ul class="pic-img-list">
-							<li><img src="https://image.myzte.com/f5/92/905851096e10.jpg!s?94786_OW800_OH800" alt=""></li>
+							<!--<li><img src="https://image.myzte.com/f5/92/905851096e10.jpg!s?94786_OW800_OH800" alt=""></li>
 							<li><img src="https://image.myzte.com/63/d4/db33bce3884e.jpg!s?94785_OW800_OH800" alt=""></li>
 							<li><img src="https://image.myzte.com/55/07/0552052d42a3.jpg!s?94785_OW800_OH800" alt=""></li>
 							<li><img src="https://image.myzte.com/b7/3f/367132bbd3c4.jpg!s?72423_OW800_OH800" alt=""></li>
@@ -47,7 +48,7 @@
 							<li><img src="https://image.myzte.com/73/71/72326184d67c.jpg!s?72421_OW800_OH800" alt=""></li>
 							<li><img src="https://image.myzte.com/73/71/72326184d67c.jpg!s?72421_OW800_OH800" alt=""></li>
 							<li><img src="https://image.myzte.com/73/71/72326184d67c.jpg!s?72421_OW800_OH800" alt=""></li>
-							<li><img src="https://image.myzte.com/73/71/72326184d67c.jpg!s?72421_OW800_OH800" alt=""></li>
+							<li><img src="https://image.myzte.com/73/71/72326184d67c.jpg!s?72421_OW800_OH800" alt=""></li>-->
 						</ul>
 					</div>
 					<div class="next"><img src="https://www.myzte.com/themes/pc/zhongxing/images/right-1.png?vb701" alt=""></div>
@@ -57,7 +58,7 @@
 			<div class="m-d-right">
 				<h1>ZTE中兴 天机Axon M折叠智能手机<br/><small>4GB+64GB/黑色/全网通</small></h1>
 				<p>直播、互动必备神器，微信聊天刷圈两不误，四种模式刷新商务、游戏、直播、阅读、拍照掌中体验！保修延长至2年，碎屏免费维修1次。 </p>
-				<div class="outprice"><span><small>￥</small><strong>3888.0</strong></span></div>
+				<div class="outprice"><!--<span><small>￥</small><strong>3888.0</strong></span>--></div>
 				<hr style="margin-bottom:8px; color: #ccc;">
 				<div class="discounts">
 					<dl class="dl-horizontal">
@@ -131,7 +132,5 @@
 		<li class="listnav-2"><a href="##"></a></li>
 		<li class="listnav-3"><a href="##"></a></li>
 	</ul>
-	<script src="script/thirdplugins/jquery.js" type="text/javascript"></script>
-	<script src="script/js/details.js" type="text/javascript"></script>
 </body>
 </html>
