--- a/src/login.html
+++ b/src/login.html
@@ -38,14 +38,16 @@
 				<div class="reg-title">
 					欢迎登录
 				</div>
-				<span id="errordata">请输入用户名和密码</span>
+				<span id="errordata"></span>
 				<div class="reg-contents">
-					<form id="signin" class="" action="" method="">
+					<form id="signin" method="post" onsubmit="return false;">
 						<div>
-							<input type="text" name="username" id="username" placeholder="手机号/邮箱/用户名/工号">
+							<input type="text" name="username" id="loginusername" placeholder="手机号/邮箱/用户名/工号">
+							<label id="username-error" class="error" for="loginusername">请输入手机号</label>
 						</div>
 						<div>
-							<input type="password" name="password" id="password" placeholder="密码">
+							<input type="password" name="password" id="loginpassword" placeholder="密码">
+							<label id="password-error" class="error" for="loginpassword">请输入密码</label>
 						</div>
 						<div>
 							<!--<button type="submit" id="sub">登录</button>-->
