出购物车页面其他页面结构和效果基本完成

--- a/src/details.html
+++ b/src/details.html
@@ -19,7 +19,7 @@
 	<div class="m-content">
 		<div class="wrapper">
 			<ol class="explain">
-				<li><a href="##">首页</a></li>
+				<li><a href="http://10.31.162.62/myzte/src/index.html">首页</a></li>
 				<li><a href="##">手机</a></li>
 				<li><a href="##">天机系列</a></li>
 				<li class="explainactive">ZTE中兴 天机Axon M折叠智能手机 6GB+128GB/黑色/全网通</li>
